--- a/IOT_n_national_accounts/IOT_n_national_sv.ipynb
+++ b/IOT_n_national_accounts/IOT_n_national_sv.ipynb
@@ -58,10 +58,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "89a776a4-3fd8-46c1-9940-53765b5dcbad",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['freq', 'unit', 'na_item',\n",
+      "       'geo\\TIME_PERIOD\\t1975 \\t1976 \\t1977 \\t1978 \\t1979 \\t1980 \\t1981 \\t1982 \\t1983 \\t1984 \\t1985 \\t1986 \\t1987 \\t1988 \\t1989 \\t1990 \\t1991 \\t1992 \\t1993 \\t1994 \\t1995 \\t1996 \\t1997 \\t1998 \\t1999 \\t2000 \\t2001 \\t2002 \\t2003 \\t2004 \\t2005 \\t2006 \\t2007 \\t2008 \\t2009 \\t2010 \\t2011 \\t2012 \\t2013 \\t2014 \\t2015 \\t2016 \\t2017 \\t2018 \\t2019 \\t2020 \\t2021 \\t2022 \\t2023 '],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
    "source": [
     "# import modules\n",
     "import pandas as pd\n",
@@ -71,15 +81,16 @@
     "\n",
     "# Import data\n",
     "# replace None with the rest of the function to load the data \n",
-    "GDP_data = None\n",
+    "GDP_data = pd.read_csv(\"data/estat_nama_10_gdp.tsv.gz\", compression=\"gzip\")\n",
     "\n",
     "# We are only interested in data in euros so make sure you slice the right currency\n",
+    "GDP_data = GDP_data[GDP_data.unit == \"CP_MEUR\"] \n",
     "\n",
-    "# print the columns, it will help you understand how you can proceed in selecting the data\n"
+    "# print the columns, it will help you understand how you can proceed in selecting the data\n",
+    "print(GDP_data.columns)"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "e0d6d14b-0df0-43a8-85ed-3757dafa5cc7",
    "metadata": {},
@@ -97,11 +108,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "de4aa089-5c9d-4f22-92c8-90d1f73e45bf",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['B11' 'B111' 'B112' 'B1G' 'B1GQ' 'B2A3G' 'D1' 'D11' 'D12' 'D2' 'D21'\n",
+      " 'D21X31' 'D2X3' 'D3' 'D31' 'P3' 'P31_S13' 'P31_S14' 'P31_S14_S15'\n",
+      " 'P31_S15' 'P32_S13' 'P3_P5' 'P3_P6' 'P3_S13' 'P41' 'P51G' 'P52' 'P52_P53'\n",
+      " 'P53' 'P5G' 'P6' 'P61' 'P62' 'P7' 'P71' 'P72' 'YA0' 'YA1' 'YA2']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(GDP_data['na_item'].unique())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -113,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "6b6d5aaa",
    "metadata": {},
    "outputs": [],
@@ -140,24 +164,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "342a2a9e",
    "metadata": {},
    "outputs": [],
    "source": [
     "# select national account codes to be isolated in the data \n",
+    "# select national account codes to be isolated in the data \n",
+    "breakdown_income = [\"D1\", \"B2A3G\", \"D2X3\"]\n",
     "\n",
+    "# Check wether all the items are available in the GDP breakdown csv\n",
+    "for bi in breakdown_income:\n",
+    "    if bi not in GDP_data.na_item.unique():\n",
+    "        print(bi)\n",
     "# Check wether all the items are available in the GDP breakdown csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "adcdf780",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "no numeric data to plot",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[9], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# organize and plot your results for the income approach\u001b[39;00m\n\u001b[0;32m      2\u001b[0m GDP_income \u001b[38;5;241m=\u001b[39m GDP_data[GDP_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mna_item\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39misin(breakdown_income)]\n\u001b[1;32m----> 3\u001b[0m \u001b[43mGDP_income\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mplot\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\plotting\\_core.py:975\u001b[0m, in \u001b[0;36mPlotAccessor.__call__\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m    972\u001b[0m             label_name \u001b[38;5;241m=\u001b[39m label_kw \u001b[38;5;129;01mor\u001b[39;00m data\u001b[38;5;241m.\u001b[39mcolumns\n\u001b[0;32m    973\u001b[0m             data\u001b[38;5;241m.\u001b[39mcolumns \u001b[38;5;241m=\u001b[39m label_name\n\u001b[1;32m--> 975\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m plot_backend\u001b[38;5;241m.\u001b[39mplot(data, kind\u001b[38;5;241m=\u001b[39mkind, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
+      "File \u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\plotting\\_matplotlib\\__init__.py:71\u001b[0m, in \u001b[0;36mplot\u001b[1;34m(data, kind, **kwargs)\u001b[0m\n\u001b[0;32m     69\u001b[0m         kwargs[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124max\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mgetattr\u001b[39m(ax, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mleft_ax\u001b[39m\u001b[38;5;124m\"\u001b[39m, ax)\n\u001b[0;32m     70\u001b[0m plot_obj \u001b[38;5;241m=\u001b[39m PLOT_CLASSES[kind](data, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[1;32m---> 71\u001b[0m \u001b[43mplot_obj\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgenerate\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     72\u001b[0m plot_obj\u001b[38;5;241m.\u001b[39mdraw()\n\u001b[0;32m     73\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m plot_obj\u001b[38;5;241m.\u001b[39mresult\n",
+      "File \u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\plotting\\_matplotlib\\core.py:446\u001b[0m, in \u001b[0;36mMPLPlot.generate\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    444\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mgenerate\u001b[39m(\u001b[38;5;28mself\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    445\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_args_adjust()\n\u001b[1;32m--> 446\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_compute_plot_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    447\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_setup_subplots()\n\u001b[0;32m    448\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_make_plot()\n",
+      "File \u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\plotting\\_matplotlib\\core.py:632\u001b[0m, in \u001b[0;36mMPLPlot._compute_plot_data\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    630\u001b[0m \u001b[38;5;66;03m# no non-numeric frames or series allowed\u001b[39;00m\n\u001b[0;32m    631\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_empty:\n\u001b[1;32m--> 632\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mno numeric data to plot\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    634\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdata \u001b[38;5;241m=\u001b[39m numeric_data\u001b[38;5;241m.\u001b[39mapply(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_convert_to_ndarray)\n",
+      "\u001b[1;31mTypeError\u001b[0m: no numeric data to plot"
+     ]
+    }
+   ],
    "source": [
-    "# organize and plot your results for the income approach"
+    "# organize and plot your results for the income approach\n",
+    "GDP_income = GDP_data[GDP_data['na_item'].isin(breakdown_income)]\n",
+    "for country in GDP_income.geo.unique(): \n",
+    "    \n"
    ]
   },
   {
@@ -261,7 +310,6 @@
    "source": []
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "2f0fdec0-964b-442a-9689-32403f186e87",
    "metadata": {},
@@ -284,15 +332,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "f4158925-2d16-4901-a5f1-08c422e976aa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IO-table 2015 current prices\n",
+      "IO-table 2016 current prices\n",
+      "IO-table 2016 PY prices\n",
+      "IO-table 2017 current prices\n",
+      "IO-table 2017 PY prices\n",
+      "IO-table 2018 current prices\n",
+      "IO-table 2018 PY prices\n",
+      "IO-table 2019 current prices\n",
+      "IO-table 2019 PY prices\n",
+      "IO-table 2020 current prices\n",
+      "IO-table 2020 PY prices\n",
+      "IO-table 2021 current prices\n",
+      "IO-table 2021 PY prices\n",
+      "Explanation\n"
+     ]
+    }
+   ],
    "source": [
     "# Load the IO data\n",
-    "CBS_IO = None\n",
+    "CBS_IO = pd.ExcelFile(f\"data/83 InputOutput tables 20152021.xlsx\", engine=\"openpyxl\")\n",
     "\n",
-    "# Print the list of sheets that are available in the xlsx file so that you can investigate what options you have\n"
+    "\n",
+    "# Print the list of sheets that are available in the xlsx file so that you can investigate what options you have\n",
+    "print(*CBS_IO.sheet_names, sep=\"\\n\")"
    ]
   },
   {
@@ -489,7 +560,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -503,7 +574,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.16"
   },
   "vscode": {
    "interpreter": {
