--- a/IOT_n_national_accounts/IOT_n_national.ipynb
+++ b/IOT_n_national_accounts/IOT_n_national.ipynb
@@ -79,7 +79,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "justus = [0, 1, 2]"
+    "def double_elements(list):\n",
+    "    for i in range(len(list)):\n",
+    "        list[i] *= 2\n",
+    "    print(list)\n",
+    "    return list\n",
+    "\n",
+    "    \"\"\"\n",
+    "    ctrl i for chat inside\n",
+    "    tab for accepting etc.\n",
+    "    after comments will suggest stuff already\n",
+    "\n",
+    "\n",
+    "    \"\"\"\n",
+    "\n",
+    "\n",
+    "\"\"\"\"\"\"\n",
+    "\n",
+    "# double_elements([1, 2, 3, 4, 5])\n",
+    "\n",
+    "def double_elements2(list):\n"
    ]
   },
   {
